// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders apple icon 1`] = `
<div
  className="icon apple base"
/>
`;

exports[`renders dashboard icon 1`] = `
<div
  className="icon dashboard base"
/>
`;

exports[`renders large arrowDown icon 1`] = `
<div
  className="icon undefined large"
/>
`;

exports[`renders small more icon 1`] = `
<div
  className="icon undefined small"
/>
`;
